# Corium

./: .gitignore  .tags  .travis.yml  CMakeCache.txt  CMakeLists.txt  Corium  LICENSE.txt  Makefile  README.md  README.txt  build.sh  buildwin.bat  clean.sh  cmake_install.cmake  controls.cfg  crossbuild.sh  makerun.sh  settings.cfg
gfx/: crm_map_export.py  dragontri.blend  dragontrifl.blend  hurricos.blend  mapsavescript.txt
gfx/models/: book.blend  bookcase.blend  bookcasewbooks.blend  cornell.blend  crab.blend  crab.blend1  sky2.blend
gfx/models/old/: dragon.blend  dragon.blend1  dragon1.blend  dragon1.blend1  dragon2.blend  dragon2.blend1  dragon3.blend  dragon3.blend1  dragon4.blend  dragonfinal.blend  dragonfinal.blend1
gfx/shader/: depth.vert  fbo.frag  fbo.vert  main.vert  pointShadow.frag  pointShadow.vert  pointShadowDepth.frag  pointShadowDepth.gs  pointShadowDepth.vert  screen.vert  screenShader.frag  screenShader.vert
lib/: libGLEW.so.2.0.0  libSOIL.so.1  libgcc_s-7-20170915.so.1  libgcc_s.so.1  libgccpp.so.1.0.3  libglfw.so.3.2  libstdc++.so.6  libstdc++.so.6.0.24
lib/include/: stb_image.h
maps/: cornell.cm  map_export.py
maps/hurricos/: hurricos.cfg  hurricos.cl  hurricos.cm
scripts/: load_script.cl  start.cl  startset.cfg
shader/: .#screen.frag  depth.frag  depth.gs  depth.vert  gui.frag  gui.vert  main.frag  main.vert  screen.frag  screen.vert
src/: anim.cpp  anim.h  audio.cpp  audio.h  corium.h  crm.h  input.cpp  input.h  main.cpp  mesh.cpp  mesh.h  phys.cpp  phys.h  physSys.cpp  physSys.h  quad.h  resource.rc  sprite.cpp  sprite.h  sys.cpp  sys.h  text.h  texture.cpp  texture.h  window.h
src/game/: game.cpp  game.h  gameInput.cpp  gameRender.cpp  tick.cpp
src/game/entity/: bat.h  crab.h  entity.cpp  entity.h  lizard.h  pelican.h  player.cpp  player.h
src/gui/: gui.cpp  gui.h  screen.h
src/phys/: phys.cpp  phys.h  sys.cpp  sys.h
src/render/: guiRenderer.h  renderer.cpp  renderer.h  screenRenderer.h  textRenderer.h
src/util/: cfgParser.h  coriumLang.h  coriumlang.h  crmLang.h  crmLexer.h  crmlang.h  crmlexer.h  currentTime.h  guiguetri.h  lexer.h  mapParser.h  mollertri.h  objParser.h  quadIsect.h  random.h  randomRange.h  randomUtil.h  random_range.h  time.h  timeUtil.h  toString.h  triIsect.h
(+11 files in other folders)
